@@ -9,6 +9,7 @@ R/Istat.R -text
 R/PatchStat.R -text
 R/Scalebar.R -text
 R/SigDiff.R -text
+R/asc.from.raster.R -text
 R/compare.matrix.R -text
 R/extract.data.R -text
 R/lcmw.R -text
@@ -21,6 +22,7 @@ man/PatchStat.Rd -text
 man/SDMTools-package.Rd -text
 man/Scalebar.Rd -text
 man/SigDiff.Rd -text
+man/asc.from.raster.Rd -text
 man/compare.matrix.Rd -text
 man/extract.data.Rd -text
 man/lcmw.Rd -text
