@@ -3,14 +3,27 @@
 
 ConnCompLabel <- 
 function(mat)	{
-	#get the input attributes
-	tattrib = attributes(mat)
+	#check input for class for returning info
+	if (class(mat) == 'asc') { 
+		attrib = attributes(mat)
+	} else if (any(class(mat) %in% 'RasterLayer')) {
+		attrib = mat; mat = asc.from.raster(mat)
+	} else if (any(class(mat) == 'SpatialGridDataFrame')) {
+		attrib = mat; mat = asc.from.sp(mat)
+	} else {
+		attrib = attributes(mat)
+	}
 	#check to ensure matrix
 	mat = try(as.matrix(mat))
 	if (!is.matrix(mat)) stop('objects must be a matrix')
 	#run the connected component labelling
 	out = .Call('ccl',mat)
 	#reset the attributes of the input
-	attributes(out) = tattrib
-	return(out)
+	if (any(class(attrib) %in% 'RasterLayer')) {
+		attrib = setValues(attrib, as.vector(t(t(unclass(out))[dim(out)[2]:1,]))); return(attrib)
+	} else if (any(class(attrib) == 'SpatialGridDataFrame')) {
+		attrib@data[1] = as.vector(unclass(out)[,dim(out)[2]:1]); return(attrib)
+	} else {
+		attributes(out) = attrib; return(out)
+	}
 }
