@@ -14,7 +14,7 @@ modelling.
 \tabular{ll}{
 Package: \tab SDMTools\cr
 Type: \tab Package\cr
-Version: \tab 1.0\cr
+Version: \tab 1.0.2\cr
 Date: \tab 2009-11-20\cr
 License: \tab GPL version 2 or newer\cr
 LazyLoad: \tab yes\cr
@@ -22,7 +22,10 @@ LazyLoad: \tab yes\cr
 
 }
 \author{
-Jeremy VanDerWal, Luke Shoo and Stephanie Januchowski
+Jeremy VanDerWal, Luke Shoo and Stephanie Januchowski with contributions of 
+Collin Storlie and Lorena Falconi. This package was made possible in part by 
+support from Australian Research Council & ARC Research Network for 
+Earth System Science.
 
 Maintainer: Jeremy VanDerWal \email{jjvanderwal@gmail.com}
 }
